fix extra being added on mobile view

--- a/style.scss
+++ b/style.scss
@@ -33,6 +33,7 @@ $secondary-color: #e8e7e6;
 }
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
